--- a/style/main.css
+++ b/style/main.css
@@ -33,7 +33,6 @@ body {
   font-size: 48px;
   line-height: 80px;
   text-align: center;
-
 }
 
 /* #endregion Общее */
@@ -121,8 +120,11 @@ body {
   flex-direction: row;
 }
 
+/* Зададим диву с изображением, который находится внутри .listening, порядок 1.*/
 .listening .skills__grid-image {
   order: 1;
+  /* По умолчанию элементы отображаются в том порядке, в котором они расположены в разметке, а значение свойства order равно 0. Но это свойство позволяет переставлять их местами. */
+  /* В данном случае в карточке в изначальной разметке HTML изображение стоит первым и имеет по умолчанию order:0, а блок с текстом про умолчанию идёт за ним, и тоже имеет order: 0. Установив order: 1 изображению мы получаем что теперь блок с текстом остался ордер 0, а изображение ордер 1, в результате флекс начинает рисовать блок с изображением вторым, а не первым */
 }
 
 @media screen and (max-width: 1280px) {
