--- a/style/main.css
+++ b/style/main.css
@@ -448,6 +448,7 @@ body {
   gap: 15px;
   flex-wrap: wrap;
   justify-content: center;
+  padding-bottom: 150px;
 }
 
 .pricing__card {
@@ -498,27 +499,58 @@ body {
 
 .section--contact-us {}
 
-.container--common {}
-
-.contact-us__flex-group {}
+.contact-us__flex-group {
+  display: flex;
+  padding-top: 75px;
+  justify-content: center;
+  gap: 94px;
+}
 
 .contact-us__left-side {}
 
-.contact-us__right-side {}
+.contact-us__right-side {
+  padding-top: 35px;
+}
 
-.h2--common {}
+.contact-us__h2 {
+  margin-bottom: 37px;
+}
 
-.contact-us__h2 {}
-
-.p--common {}
-
-.contact-us__p {}
+.contact-us__p {
+  margin-bottom: 51px;
+}
 
 .contact-us__form {}
 
-.contact-us__input {}
+.contact-us__input {
+  max-width: 450px;
+  width: 100%;
+  min-height: 80px;
 
-.contact-us__btn-subscribe {}
+  border: 1px solid #8f95a5;
+  border-radius: 10px;
 
+  font-family: inherit;
+  font-weight: 400;
+  font-size: 16px;
+  color: #8f95a5;
+
+  padding-left: 32px;
+  margin-right: 8px;
+}
+
+.contact-us__btn-subscribe {
+  max-width: 264px;
+  width: 100%;
+  min-height: 80px;
+
+  border-radius: 10px;
+  background-color: #263238;
+
+  font-family: inherit;
+  font-weight: 500;
+  font-size: 20px;
+  color: #fff;
+}
 
 /* #endregion Section Contact us */
