--- a/style/main.css
+++ b/style/main.css
@@ -42,8 +42,10 @@ body {
   width: 100%;
 
   /* отступы слева и справа: */
-  padding: 0 130px;
-
+  /* padding-left: 130px; */
+  /* padding-right: 130px; */
+  padding-left: 5.4%;
+  padding-right: 5.4%;
   margin: 0 auto;
 }
 
@@ -88,10 +90,10 @@ body {
   padding-bottom: 48px;
 }
 
-.header__logo {}
+.logo {}
 
 /* всё слово "Britlex" */
-.header__logo--a {
+.logo--a {
   text-decoration: none;
   font-weight: 400;
   font-size: 36px;
@@ -104,18 +106,18 @@ body {
 }
 
 /* всё слово "Britlex" при наведении */
-.header__logo--a:hover,
-.header__logo--a:focus {
+.logo--a:hover,
+.logo--a:focus {
   background-color: khaki;
 }
 
 /* вторая часть слова "lex" */
-.header__logo--right-text {
+.logo--right-text {
   color: #939393;
 }
 
 /*/~ линия подчёркивания, без наведения невидимая ~/
-.header__logo::after {
+.logo::after {
   content: "";
   display: grid;
   place-self: center;
@@ -130,7 +132,7 @@ body {
 }
 
 /~ линия подчёркивания, при наведении делаем видимой ~/
-.header__logo:hover::after {
+.logo:hover::after {
   background-color: var(--color-grey);
   width: 100%;
 }*/
@@ -202,10 +204,14 @@ body {
 .home____flex-group {
   display: flex;
   flex-wrap: wrap;
-  justify-content: space-between;
+  justify-content: center;
+  gap: 10px;
 }
 
-.home--left-side {}
+.home--left-side {
+  max-width: 545px;
+  width: 100%;
+}
 
 .home--left-side__title-plus-img {
   display: flex;
@@ -229,8 +235,6 @@ body {
   font-weight: 400;
   font-size: 24px;
   color: #8f95a5;
-
-  max-width: 545px;
 
   margin-bottom: 60px;
 }
@@ -504,12 +508,14 @@ body {
   padding-top: 75px;
   justify-content: center;
   gap: 94px;
+  flex-wrap: wrap;
 }
 
 .contact-us__left-side {}
 
 .contact-us__right-side {
   padding-top: 35px;
+  max-width: 769px;
 }
 
 .contact-us__h2 {
@@ -554,3 +560,45 @@ body {
 }
 
 /* #endregion Section Contact us */
+
+/* #region Footer */
+
+.footer {}
+
+.footer--container {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+
+  padding-top: 129px;
+}
+
+.footer__line {
+  width: 100%;
+  height: 1px;
+  background-color: #C4C4C4;
+
+  margin-bottom: 29px;
+}
+
+.footer__ul {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 25px;
+}
+
+.footer__nav--li {}
+
+.footer__nav--li::marker {
+  /* оформление маркеров */
+  color: #8f95a5;
+}
+
+.footer__nav--li-a {
+  text-decoration: none;
+  font-weight: 400;
+  font-size: 24px;
+  color: #8f95a5;
+}
+
+/* #endregion Footer */
